--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.555.0",
     "qr-code-styling": "^1.9.2",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "typescript": "^5.9.3"
