--- a/vercel.json
+++ b/vercel.json
@@ -44,7 +44,7 @@
       ]
     },
     {
-      "source": "/((.*\\.(js|css|png|jpg|jpeg|gif|ico|svg)))",
+      "source": "/assets/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
